--- a/css/styles.css
+++ b/css/styles.css
@@ -56,8 +56,8 @@ header {
 
   border-radius: 20px;
 
-  box-shadow: ;
-  
+  box-shadow: 5px 10px 3px 0px rgba(0, 0, 0, 0.2) ;
+
   /*
       #2 
       Mettre une ombre aux boutons :
